formularios login, register y funcionamiento flex

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button color="primary"><mat-icon>account_circle</mat-icon> primer botón material</button>
+<router-outlet></router-outlet>
