register form validated

--- a/src/app/seguridad/registrar/registrar.component.html
+++ b/src/app/seguridad/registrar/registrar.component.html
@@ -1,19 +1,40 @@
 <section>
-  <form>
+  <form
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    #f="ngForm"
+    (ngSubmit)="registrarUsuario(f)"
+  >
     <mat-form-field>
       <mat-label>Ingrese email</mat-label>
-      <input type="email" matInput placeholder="email@corre.com" />
+      <input
+        type="email"
+        matInput
+        placeholder="email@corre.com"
+        name="Email"
+        ngModel="email"
+        email
+        required
+        #emailInput="ngModel"
+      />
+      <mat-error *ngIf="emailInput.hasError('required')">El email no puede estar en blanco</mat-error>
+      <mat-error *ngIf="!emailInput.hasError('required')">El email es invalido</mat-error>
     </mat-form-field>
 
-    <mat-form-field>
+    <mat-form-field hintLabel="El password debe tener al menos 7 caracteres">
       <mat-label>Ingrese password</mat-label>
-      <input type="password" matInput placeholder="password" />
+      <input
+        type="password"
+        matInput
+        placeholder="password"
+        name="password"
+        ngModel="password"
+        required
+        minlength="7"
+      />
+      <mat-error>El password debe tener mas de 7 caracteres</mat-error>
     </mat-form-field>
-  </form>
-</section>
 
-<section id="contenedor">
-  <div id="elemento1" class="elemento"></div>
-  <div id="elemento2" class="elemento"></div>
-  <div id="elemento3" class="elemento"></div>
+    <button type="submit" mat-raised-button color="primary">Guardar</button>
+  </form>
 </section>
