--- a/src/app/seguridad/registrar/registrar.component.css
+++ b/src/app/seguridad/registrar/registrar.component.css
@@ -1,24 +1,4 @@
-#contenedor{
-  display: flex;
-  width: 100%;
-  height: 700px;
-  border: 1px solid blue;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.elemento{
-  width: 150px;
-  /* flex: 1; */
-  height: 150px;
-}
-#elemento1{
-  background-color: red;
-}
-#elemento2{
-  background-color: royalblue;
-  /* flex: 2; */
-}
-#elemento3{
-  background-color: green;
+body { background-color: #FF0000; }
+mat-form-field {
+  width: 300px;
 }
