--- a/src/app/seguridad/registrar/registrar.component.html
+++ b/src/app/seguridad/registrar/registrar.component.html
@@ -4,7 +4,47 @@
     fxLayoutAlign="center center"
     #f="ngForm"
     (ngSubmit)="registrarUsuario(f)"
+    fxLayoutGap="10px"
   >
+    <mat-form-field>
+      <mat-label>Ingrese Nombre</mat-label>
+      <input
+        type="text"
+        ngModel
+        name="nombre"
+        required
+        placeholder="Ingrese nombre"
+        matInput
+      />
+      <mat-error>Debe ingresar un nombre</mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Ingrese Apellidos</mat-label>
+      <input
+        type="text"
+        ngModel
+        name="apellidos"
+        required
+        placeholder="Ingrese apellidos"
+        matInput
+      />
+      <mat-error>Debe ingresar su/s apellido/s</mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Ingrese usuario</mat-label>
+      <input
+        type="text"
+        ngModel
+        name="usuario"
+        required
+        placeholder="matigodoy"
+        matInput
+      />
+      <mat-error>Debe ingresar un usuario</mat-error>
+    </mat-form-field>
+
     <mat-form-field>
       <mat-label>Ingrese email</mat-label>
       <input
@@ -17,8 +57,12 @@
         required
         #emailInput="ngModel"
       />
-      <mat-error *ngIf="emailInput.hasError('required')">El email no puede estar en blanco</mat-error>
-      <mat-error *ngIf="!emailInput.hasError('required')">El email es invalido</mat-error>
+      <mat-error *ngIf="emailInput.hasError('required')"
+        >El email no puede estar en blanco</mat-error
+      >
+      <mat-error *ngIf="!emailInput.hasError('required')"
+        >El email es invalido</mat-error
+      >
     </mat-form-field>
 
     <mat-form-field hintLabel="El password debe tener al menos 7 caracteres">
@@ -35,6 +79,6 @@
       <mat-error>El password debe tener mas de 7 caracteres</mat-error>
     </mat-form-field>
 
-    <button type="submit" mat-raised-button color="primary">Guardar</button>
+    <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Guardar</button>
   </form>
 </section>
